# tohorank

./: .gitignore  Cargo.toml  LICENSE  README.md  generate_charas.py  generate_groups.py  install.sh
src/: best_taste.txt  chara.rs  data.rs  glicko.rs  groups.rs  lobby.rs  main.rs  norm.rs  sort.rs  stats.rs  touhous.txt
