[package]
name = "tohorank"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8.5"
colored = "2.1.0"
rustyline = "14.0.0"
strum = "0.26.2"
strum_macros = "0.26.2"
fuzzy-matcher = "*"
chrono = "0.4.38"
dirs = "5.0.1"
termplot = "0.1.0"
